--- a/app/assets/stylesheets/desktop/homepage/dashboard.scss
+++ b/app/assets/stylesheets/desktop/homepage/dashboard.scss
@@ -9,6 +9,10 @@
 		overflow-y: auto;
 	}
 
+	.dashboard-container .category-count{
+		margin-left: 5%;
+	}
+
 	.category-form{
 		position: relative;
 		margin-top: 3%;
